add transparency, detail about page

--- a/_layout/header.html
+++ b/_layout/header.html
@@ -3,8 +3,9 @@
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/menu1/">About</a></li>
-    <li><a href="/menu2/">Contribute</a></li>
+    <li><a href="/about/">About</a></li>
+    <li><a href="/contribute/">Contribute</a></li>
+    <!-- <li><a href=/transparency/">Transparency</a></li> -->
   </ul>
   <img src="/assets/hamburger.svg" id="menu-icon">
 </nav>
