WIP; add socials to footer of page

--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -1,4 +1,28 @@
+<div>
+    <a href="https://github.com/JuliaDispatch" target="_blank">
+        <img src="/assets/infra/github.svg" height="{{fill logo_size}}" width="{{fill logo_size}}" alt="GitHub Logo" />
+        Github org
+    </a>
+    <a href="https://spotify.com/" target="_blank">
+        <img src="/assets/infra/spotify.svg" height="{{fill logo_size}}" width="{{fill logo_size}}" alt="GitHub Logo" />
+        Listen on Spotify
+    </a>
+    <a href="https://spotify.com/" target="_blank">
+        <img src="/assets/infra/spotify.svg" height="{{fill logo_size}}" width="{{fill logo_size}}" alt="GitHub Logo" />
+        Listen on Apple Podcasts
+    </a>
+    <a href="https://spotify.com/" target="_blank">
+        <img src="/assets/infra/spotify.svg" height="{{fill logo_size}}" width="{{fill logo_size}}" alt="GitHub Logo" />
+        Watch on YouTube
+    </a>
+    <a href="https://spotify.com/" target="_blank">
+        <img src="/assets/infra/spotify.svg" height="{{fill logo_size}}" width="{{fill logo_size}}" alt="GitHub Logo" />
+        More socials ...
+    </a>
+</div>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}. {{isnotpage /tag/*}}Last modified: {{ fill fd_mtime }}.{{end}}
-    Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
+    <div>
+        <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> {{ fill author }}. {{isnotpage /tag/*}}Last modified: {{ fill fd_mtime }}.{{end}}
+        Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
+    </div>
 </div>
