add Apple Podcasts logo

--- a/_layout/page_foot.html
+++ b/_layout/page_foot.html
@@ -8,7 +8,7 @@
         Listen on Spotify
     </a>
     <a href="https://spotify.com/" target="_blank">
-        <img src="/assets/infra/spotify.svg" height="{{fill logo_size}}" width="{{fill logo_size}}" alt="GitHub Logo" />
+        <img src="/assets/infra/apple_podcasts.svg" height="{{fill logo_size}}" width="{{fill logo_size}}" alt="GitHub Logo" />
         Listen on Apple Podcasts
     </a>
     <a href="https://spotify.com/" target="_blank">
